--- a/src/cascadia/TerminalApp/Resources/Resources.language-en.resw
+++ b/src/cascadia/TerminalApp/Resources/Resources.language-en.resw
@@ -224,7 +224,7 @@ Temporarily using the Windows Terminal default settings.
     <value>Color...</value>
   </data>
   <data name="TabColorCustomButton.Content" xml:space="preserve">
-    <value>Custom</value>
+    <value>Custom...</value>
   </data>
   <data name="TabColorClearButton.Content" xml:space="preserve">
     <value>Reset</value>
