--- a/src/cascadia/TerminalConnection/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalConnection/Resources/en-US/Resources.resw
@@ -124,13 +124,13 @@
     <value>Please enter the desired tenant number.</value>
   </data>
   <data name="AzureNewLogin" xml:space="default">
-    <value>Enter %s to login with a different account</value>
+    <value>Enter {0} to login with a different account</value>
   </data>
   <data name="AzureRemoveStored" xml:space="default">
-    <value>Enter %s to remove the above saved connection settings.</value>
+    <value>Enter {0} to remove the above saved connection settings.</value>
   </data>
   <data name="AzureInvalidAccessInput" xml:space="default">
-    <value>Please enter a valid number to access the stored connection settings, %s to make a new one, or %s to remove the stored ones.</value>
+    <value>Please enter a valid number to access the stored connection settings, {0} to make a new one, or {1} to remove the stored ones.</value>
   </data>
   <data name="AzureNonNumberError" xml:space="preserve">
     <value>Please enter a number.</value>
@@ -143,12 +143,13 @@
   </data>
   <data name="AzureNoCloudAccount" xml:space="preserve">
     <value>You have not set up your cloud shell account yet. Please go to https://shell.azure.com to set it up.</value>
+    <comment>{Locked="https://shell.azure.com"} This URL should not be localized. Everything else should.</comment>
   </data>
   <data name="AzureStorePrompt" xml:space="default">
-    <value>Do you want to save these connection settings for future logins? [%s/%s]</value>
+    <value>Do you want to save these connection settings for future logins? [{0}/{1}]</value>
   </data>
   <data name="AzureInvalidStoreInput" xml:space="default">
-    <value>Please enter %s or %s</value>
+    <value>Please enter {0} or {1}</value>
   </data>
   <data name="AzureRequestingCloud" xml:space="preserve">
     <value>Requesting a cloud shell instance...</value>
@@ -184,7 +185,7 @@
     <value>&lt;unknown tenant name&gt;</value>
   </data>
   <data name="AzureIthTenant" xml:space="default">
-    <value>Tenant %s: %s (%s)</value>
+    <value>Tenant {0}: {1} ({2})</value>
   </data>
   <data name="AzureSuccessfullyAuthenticated" xml:space="preserve">
     <value>Authenticated.</value>
@@ -206,13 +207,12 @@
     <comment>The user must enter this character to signify NO</comment>
   </data>
   <data name="ProcessExited" xml:space="preserve">
-    <value>[process exited with code %u]</value>
-    <comment>The first argument (%u) is the (positive) error code of the process. 0 is success.</comment>
+    <value>[process exited with code {0}]</value>
+    <comment>The first argument {0} is the (positive) error code of the process. 0 is success.</comment>
   </data>
   <data name="ProcessFailedToLaunch" xml:space="preserve">
-    <value>[error 0x%8.08x when launching `%ls']</value>
-    <comment>The first argument is the hexadecimal error code. The second is the process name.
-If this resource spans multiple lines, it will not be displayed properly. Yeah.</comment>
+    <value>[error {0:#08x} when launching `{1}']</value>
+    <comment>The first argument is the hexadecimal error code. The second is the process name. If this string is broken to multiple lines, it will not be displayed properly.</comment>
   </data>
   <data name="TelnetInternetOrServerIssue" xml:space="preserve">
     <value>Could not connect to telnet server.</value>
