hyphen is right i think

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -263,8 +263,8 @@
     <comment>A hyperlink name for the Terminal's privacy policy</comment>
   </data>
   <data name="AboutDialog_ThirdPartyNoticesLink.Content" xml:space="preserve">
-    <value>Third Party Notices</value>
-    <comment>A hyperlink name for the Terminal's third party notices</comment>
+    <value>Third-Party Notices</value>
+    <comment>A hyperlink name for the Terminal's third-party notices</comment>
   </data>
   <data name="ApplicationDisplayNameUnpackaged" xml:space="preserve">
     <value>Windows Terminal (Unpackaged)</value>
