--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -327,6 +327,9 @@
   <data name="CloseAllDialog.PrimaryButtonText" xml:space="preserve">
     <value>Close all</value>
   </data>
+  <data name="CloseAllDialog_ShowCloseAllTabsCheck.Content" xml:space="preserve">
+    <value>Remember this decision</value>
+  </data>
   <data name="CloseAllDialog.Title" xml:space="preserve">
     <value>Do you want to close all tabs?</value>
   </data>
