--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -334,22 +334,71 @@
     <value>Command Prompt</value>
     <comment>This is the name of "Command Prompt", as localized in Windows. The localization here should match the one in the Windows product for "Command Prompt"</comment>
   </data>
-  <data name="NewTabCommandName" xml:space="preserve">
-    <value>Open New Tab</value>
+  <data name="CommandPalette_SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Type a command name...</value>
   </data>
-  <data name="CloseTabCommandKey" xml:space="preserve">
-    <value>Close Tab</value>
+
+  <data name="CloseWindowCommandKey" xml:space="preserve">
+    <value>Close Window</value>
   </data>
-  <data name="ClosePaneCommandKey" xml:space="preserve">
-    <value>Close Pane</value>
+  <data name="ToggleFullscreenCommandKey" xml:space="preserve">
+    <value>Toggle Fullscreen</value>
+  </data>
+  <data name="OpenNewTabDropdownCommandKey" xml:space="preserve">
+    <value>Open New Tab Dropdown</value>
+  </data>
+  <data name="OpenSettingsCommandKey" xml:space="preserve">
+    <value>Open Settings</value>
+  </data>
+  <data name="FindCommandKey" xml:space="preserve">
+    <value>Find</value>
+  </data>
+  <data name="NewTabCommandKey" xml:space="preserve">
+    <value>New Tab</value>
+  </data>
+  <data name="DuplicateTabCommandKey" xml:space="preserve">
+    <value>Duplicate Tab</value>
   </data>
   <data name="NextTabCommandKey" xml:space="preserve">
     <value>Next Tab</value>
   </data>
   <data name="PrevTabCommandKey" xml:space="preserve">
-    <value>Previous Tab</value>
+    <value>Prev Tab</value>
   </data>
-  <data name="OpenSettingsCommandKey" xml:space="preserve">
-    <value>Open Settings</value>
+  <data name="ClosePaneCommandKey" xml:space="preserve">
+    <value>Close Pane</value>
+  </data>
+  <data name="SplitHorizontalCommandKey" xml:space="preserve">
+    <value>Split Horizontal</value>
+  </data>
+  <data name="SplitVerticalCommandKey" xml:space="preserve">
+    <value>Split Vertical</value>
+  </data>
+  <data name="CopyTextCommandKey" xml:space="preserve">
+    <value>Copy Text</value>
+  </data>
+  <data name="PasteCommandKey" xml:space="preserve">
+    <value>Paste</value>
+  </data>
+  <data name="ScrollDownCommandKey" xml:space="preserve">
+    <value>Scroll Down One Line</value>
+  </data>
+  <data name="ScrollDownPageCommandKey" xml:space="preserve">
+    <value>Scroll Down One Page</value>
+  </data>
+  <data name="ScrollUpCommandKey" xml:space="preserve">
+    <value>Scroll Up One Line</value>
+  </data>
+  <data name="ScrollUpPageCommandKey" xml:space="preserve">
+    <value>Scroll Up One Page</value>
+  </data>
+  <data name="IncreaseFontSizeCommandKey" xml:space="preserve">
+    <value>Increase Font Size</value>
+  </data>
+  <data name="DecreaseFontSizeCommandKey" xml:space="preserve">
+    <value>Decrease Font Size</value>
+  </data>
+  <data name="ResetFontSizeCommandKey" xml:space="preserve">
+    <value>Reset Font Size</value>
   </data>
 </root>
