Add some stability
  Don't die when we encounter an unexpected key
  Reload successfully

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -359,7 +359,7 @@
   <data name="DuplicateTabCommandKey" xml:space="preserve">
     <value>Duplicate Tab</value>
   </data>
-  <data name="DuplicateTabCommandKey" xml:space="preserve">
+  <data name="DuplicatePaneCommandKey" xml:space="preserve">
     <value>Duplicate Pane</value>
   </data>
   <data name="NextTabCommandKey" xml:space="preserve">
