Remove parentheses from Preview build

--- a/src/cascadia/CascadiaPackage/Resources/Resources.resw
+++ b/src/cascadia/CascadiaPackage/Resources/Resources.resw
@@ -124,7 +124,7 @@
     <value>Windows Terminal (Dev Build)</value>
   </data>
   <data name="AppNamePre" xml:space="preserve">
-    <value>Windows Terminal (Preview)</value>
+    <value>Windows Terminal Preview</value>
   </data>
   <data name="AppShortName" xml:space="preserve">
     <value>Terminal</value>
@@ -133,6 +133,6 @@
     <value>Terminal (Dev)</value>
   </data>
   <data name="AppShortNamePre" xml:space="preserve">
-    <value>Terminal (Preview)</value>
+    <value>Terminal Preview</value>
   </data>
 </root>
