also remove parens from Dev build

--- a/src/cascadia/CascadiaPackage/Resources/Resources.resw
+++ b/src/cascadia/CascadiaPackage/Resources/Resources.resw
@@ -121,7 +121,7 @@
     <value>Windows Terminal</value>
   </data>
   <data name="AppNameDev" xml:space="preserve">
-    <value>Windows Terminal (Dev Build)</value>
+    <value>Windows Terminal Dev Build</value>
   </data>
   <data name="AppNamePre" xml:space="preserve">
     <value>Windows Terminal Preview</value>
@@ -130,7 +130,7 @@
     <value>Terminal</value>
   </data>
   <data name="AppShortNameDev" xml:space="preserve">
-    <value>Terminal (Dev)</value>
+    <value>Terminal Dev</value>
   </data>
   <data name="AppShortNamePre" xml:space="preserve">
     <value>Terminal Preview</value>
