Use the visibility changed event, not the ToggleVisibility function.
  Also misc spellchecks, nits.

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -351,7 +351,7 @@
     <value>Type a command name...</value>
   </data>
   <data name="CommandPalette_NoMatchesText.Text" xml:space="preserve">
-    <value>No matches found</value>
+    <value>No matching commands</value>
   </data>
   <data name="CloseWindowCommandKey" xml:space="preserve">
     <value>Close window</value>
