escape profile names for json before re-parsing

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -223,8 +223,8 @@
     <value>For more info, see this web page.</value>
   </data>
   <data name="FailedToParseCommandJson" xml:space="preserve">
-    <value>The "globals" property is deprecated - your settings might need updating. </value>
-    <comment>{Locked="\"globals\""} </comment>
+    <value>Failed to expand a command with "iterateOn" set. This command will be ignored.</value>
+    <comment>{Locked="\"iterateOn\""} </comment>
   </data>
   <data name="CmdCommandArgDesc" xml:space="preserve">
     <value>An optional command, with arguments, to be spawned in the new tab or pane</value>
