add a modeswitch function to change up the xaml elements based on the mode

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -527,6 +527,9 @@
   <data name="ToggleTabSwitcherCommandKey" xml:space="preserve">
     <value>Toggle tab switcher</value>
   </data>
+  <data name="TabSwitcher_SearchBoxText" xml:space="preserve">
+    <value>Type a tab name...</value>
+  </data>
   <data name="CrimsonColorButton.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Crimson</value>
   </data>
