--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -526,6 +526,9 @@
   <data name="ToggleCommandPaletteCommandKey" xml:space="preserve">
     <value>Toggle command palette</value>
   </data>
+  <data name="CommandPaletteControlName" xml:space="preserve">
+    <value>Command Palette</value>
+  </data>
   <data name="SetTabColorCommandKey" xml:space="preserve">
     <value>Set tab color to {0}</value>
     <comment>{0} will be replaced with a color, displayed in hexadecimal (#RRGGBB) notation.</comment>
@@ -546,6 +549,9 @@
   <data name="ExecuteCommandlineCommandKey" xml:space="preserve">
     <value>Run commandline "{0}" in this window</value>
     <comment>{0} will be replaced with user-defined commandline</comment>
+  </data>
+  <data name="TabSwitcherControlName" xml:space="preserve">
+    <value>Tab Switcher</value>
   </data>
   <data name="ToggleTabSwitcherCommandKey" xml:space="preserve">
     <value>Toggle tab switcher</value>
