Fixed #3799: Introduce sendInput command

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -449,6 +449,9 @@
   <data name="NewTabCommandKey" xml:space="preserve">
     <value>New tab</value>
   </data>
+  <data name="SendInputCommandKey" xml:space="preserve">
+    <value>Send Input</value>
+  </data>
   <data name="SplitPaneCommandKey" xml:space="preserve">
     <value>Split pane</value>
   </data>
