--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -450,7 +450,8 @@
     <value>New tab</value>
   </data>
   <data name="SendInputCommandKey" xml:space="preserve">
-    <value>Send Input</value>
+    <value>Send Input: "{0}"</value>
+    <comment>{0} will be replaced with a string of input as defined by the user</comment>
   </data>
   <data name="SplitPaneCommandKey" xml:space="preserve">
     <value>Split pane</value>
