changing resource strings

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -204,12 +204,12 @@
     <value>Warnings were found while parsing your keybindings:</value>
   </data>
   <data name="TooManyKeysForChord" xml:space="preserve">
-    <value>• Found a keybinding with too many strings for the "keys" array. There should only be one string value in the "keys" array.</value>
-    <comment>{Locked="\"keys\"","•"} This glyph is a bullet, used in a bulleted list.</comment>
+    <value>&#x2022; Found a keybinding with too many strings for the "keys" array. There should only be one string value in the "keys" array.</value>
+    <comment>{Locked="\"keys\"","&#x2022;"} This glyph is a bullet, used in a bulleted list.</comment>
   </data>
   <data name="MissingRequiredParameter" xml:space="preserve">
-    <value>• Found a keybinding that was missing a required parameter value. This keybinding will be ignored.</value>
-    <comment>{Locked="•"} This glyph is a bullet, used in a bulleted list.</comment>
+    <value>&#x2022; Found a keybinding that was missing a required parameter value. This keybinding will be ignored.</value>
+    <comment>{Locked="&#x2022;"} This glyph is a bullet, used in a bulleted list.</comment>
   </data>
   <data name="LegacyGlobalsProperty" xml:space="preserve">
     <value>The "globals" property is deprecated - your settings might need updating. </value>
@@ -652,9 +652,8 @@
   <data name="CloseTabsAfterDefaultCommandKey" xml:space="preserve">
     <value>Close all tabs after the current tab</value>
   </data>
-  <data name="InvalidLinkContent" xml:space="preserve">
-    <value>The URI "{0}" is invalid. </value>
-    <comment>{0} will be replaced by the URI the user is attempting to open. </comment>
+  <data name="InvalidLinkDialog.Content" xml:space="preserve">
+    <value>There was an error reading this hyperlink.</value>
   </data>
   <data name="InvalidLinkDialog.PrimaryButtonText" xml:space="preserve">
     <value>Cancel</value>
